/******************************************************************************

 This source file is part of the ProtoCall project.

 Copyright 2013 Kitware, Inc.

 This source code is released under the New BSD License, (the "License").

 Unless required by applicable law or agreed to in writing, software
 distributed under the License is distributed on an "AS IS" BASIS,
 WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
 See the License for the specific language governing permissions and
 limitations under the License.

 ******************************************************************************/

#ifndef SERVICE_H_
#define SERVICE_H_


namespace ProtoCall {
namespace Runtime {

class Service
{
public:
  Service() {};
};

} // end namespace Runtime
} // end namespace ProtoCall

#endif /* SERVICE_H_ */
